Add API endpoints to analytics service